Working on training app structure.

--- a/exploration/Untitled.ipynb
+++ b/exploration/Untitled.ipynb
@@ -104,135 +104,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>0.1</th>\n",
-       "      <th>Alarm set, early bird n all that. Night all xx</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>You have my word we will RT @JRwrz: @Thotcho b...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>@chanelisabeth that nigger music</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>I hate you niccas! Lol http://t.co/NqSYeQhGOZ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>@SoftestMuffin @_tee13 @TorahBlaze will convin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Oregon losing IN OREGON ahhhahahaha faggots</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19761</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>ion trust these bitches and ion trust these ni...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19764</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>#California is full of white trash who moved f...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19795</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Aint nobody wearing those new Westbrook \"Jorda...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19797</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>@JoeDouglas1 I guess blaspheme to your Allah i...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19812</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>RT @tailorlamar: yall niggas is hoes.</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1271 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       0  0.1     Alarm set, early bird n all that. Night all xx\n",
-       "13     3    0  You have my word we will RT @JRwrz: @Thotcho b...\n",
-       "26     2    1                   @chanelisabeth that nigger music\n",
-       "36     2    1      I hate you niccas! Lol http://t.co/NqSYeQhGOZ\n",
-       "38     2    1  @SoftestMuffin @_tee13 @TorahBlaze will convin...\n",
-       "44     2    1        Oregon losing IN OREGON ahhhahahaha faggots\n",
-       "...   ..  ...                                                ...\n",
-       "19761  2    4  ion trust these bitches and ion trust these ni...\n",
-       "19764  2    1  #California is full of white trash who moved f...\n",
-       "19795  3    0  Aint nobody wearing those new Westbrook \"Jorda...\n",
-       "19797  2    1  @JoeDouglas1 I guess blaspheme to your Allah i...\n",
-       "19812  2    6              RT @tailorlamar: yall niggas is hoes.\n",
-       "\n",
-       "[1271 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df['0'] > 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -442,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +386,7 @@
        "4     0        3  &#8220;@RawrItsTaraa: Trust these bitches ? Na..."
       ]
      },
-     "execution_count": 29,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,6 +414,8 @@
     "\n",
     "# Creating our tokenizer function\n",
     "def spacy_tokenizer(sentence):\n",
+    "    sentence = sentence.strip().lower()\n",
+    "    \n",
     "    # Creating our token object, which is used to create documents with linguistic annotations.\n",
     "    mytokens = parser(sentence)\n",
     "\n",
@@ -579,15 +452,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "                dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "                lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "                ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+       "                strip_accents=None, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                tokenizer=<function spacy_tokenizer at 0x1a5616dc20>,\n",
+       "                vocabulary=None)"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bow_vector = CountVectorizer(tokenizer = spacy_tokenizer, ngram_range=(1,1))\n",
+    "bow_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Pipeline(memory=None,\n",
-       "         steps=[('cleaner', <__main__.predictors object at 0x12ee9b890>),\n",
-       "                ('vectorizer',\n",
+       "         steps=[('vectorizer',\n",
        "                 CountVectorizer(analyzer='word', binary=False,\n",
        "                                 decode_error='strict',\n",
        "                                 dtype=<class 'numpy.int64'>, encoding='utf-8',\n",
@@ -596,7 +495,7 @@
        "                                 ngram_range=(1, 1), preprocessor=None,\n",
        "                                 stop_words=None, strip_accents=None,\n",
        "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
-       "                                 tokenizer=<function spacy_tokenizer at 0x1254c1170>,\n",
+       "                                 tokenizer=<function spacy_tokenizer at 0x1a5616dc20>,\n",
        "                                 vocabulary=None)),\n",
        "                ('classifier',\n",
        "                 LinearSVC(C=1.0, class_weight=None, dual=True,\n",
@@ -607,7 +506,7 @@
        "         verbose=False)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +529,7 @@
     "classifier = LinearSVC() #LogisticRegression(max_iter=512)\n",
     "\n",
     "# Create pipeline using Bag of Words\n",
-    "pipe = Pipeline([(\"cleaner\", predictors()),\n",
+    "pipe = Pipeline([#('cleaner', predictors()),\n",
     "                 ('vectorizer', bow_vector),\n",
     "                 ('classifier', classifier)])\n",
     "\n",
@@ -640,99 +539,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5948,)"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn import metrics\n",
-    "# Predicting with a test dataset\n",
-    "predicted = pipe.predict(X_test)\n",
-    "predicted.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 2, 2, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 2, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
-       "       0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
-       "       0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 2, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 1, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 1, 0, 0,\n",
-       "       0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 1,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 2, 0, 0, 1, 2, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 2,\n",
-       "       0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 1, 0, 0, 0, 0, 2, 0, 2, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0,\n",
-       "       0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
-       "       0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 1, 0, 1, 0, 2, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 2, 1, 0,\n",
-       "       0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0,\n",
-       "       0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 1, 0, 1, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0])"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted[100:1000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Accuracy: 0.781607262945528\n",
-      "Logistic Regression Precision: 0.781607262945528\n",
-      "Logistic Regression Recall: 0.781607262945528\n"
+      "Logistic Regression Accuracy: 0.7708473436449227\n",
+      "Logistic Regression Precision: 0.7708473436449227\n",
+      "Logistic Regression Recall: 0.7708473436449227\n"
      ]
     }
    ],
@@ -840,22 +656,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.0, 0.0)"
+       "(0.9938837346736191, 0.0005736731093321747)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pearsonr([1,2,3,4,5], [2,4,6,8,10])"
+    "pearsonr([1,2,3,4,5], [3,4,6,8,10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = pearsonr(y_test, predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.82826964511012e-188"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[1]"
    ]
   },
   {
