Logistic Regression baseline

--- a/exploration/exploration.ipynb
+++ b/exploration/exploration.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -498,15 +498,17 @@
        "                                 tokenizer=<function spacy_tokenizer at 0x1a5616dc20>,\n",
        "                                 vocabulary=None)),\n",
        "                ('classifier',\n",
-       "                 LinearSVC(C=1.0, class_weight=None, dual=True,\n",
-       "                           fit_intercept=True, intercept_scaling=1,\n",
-       "                           loss='squared_hinge', max_iter=1000,\n",
-       "                           multi_class='ovr', penalty='l2', random_state=None,\n",
-       "                           tol=0.0001, verbose=0))],\n",
+       "                 LogisticRegression(C=1.0, class_weight=None, dual=False,\n",
+       "                                    fit_intercept=True, intercept_scaling=1,\n",
+       "                                    l1_ratio=None, max_iter=512,\n",
+       "                                    multi_class='auto', n_jobs=None,\n",
+       "                                    penalty='l2', random_state=None,\n",
+       "                                    solver='lbfgs', tol=0.0001, verbose=0,\n",
+       "                                    warm_start=False))],\n",
        "         verbose=False)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +528,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import LinearSVC\n",
     "\n",
-    "classifier = LinearSVC() #LogisticRegression(max_iter=512)\n",
+    "classifier = LogisticRegression(max_iter=512)# LogisticRegression(max_iter=512)\n",
     "\n",
     "# Create pipeline using Bag of Words\n",
     "pipe = Pipeline([#('cleaner', predictors()),\n",
@@ -539,16 +541,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1,  2,  3,  4,  5,  6, 10])"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "bins = np.arange(2, 7)\n",
+    "bins\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Accuracy: 0.7708473436449227\n",
-      "Logistic Regression Precision: 0.7708473436449227\n",
-      "Logistic Regression Recall: 0.7708473436449227\n"
+      "[ 3.04174769 -0.1042171  -0.14861452 -0.17384757  0.89399207 -1.62686592\n",
+      "  1.00199956  0.83670408  0.38263013  0.39464244]\n",
+      "[5 3 3 3 3 3 3 3 3 3]\n",
+      "14376    0\n",
+      "9952     0\n",
+      "5678     0\n",
+      "12253    0\n",
+      "5356     0\n",
+      "17999    0\n",
+      "13347    0\n",
+      "5588     1\n",
+      "12805    0\n",
+      "4793     0\n",
+      "Name: hate, dtype: int64\n",
+      "Logistic Regression Accuracy: 0.008742434431741762\n",
+      "Logistic Regression Precision: 0.008742434431741762\n",
+      "Logistic Regression Recall: 0.008742434431741762\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "from sklearn.preprocessing import KBinsDiscretizer\n",
+    "import numpy as np\n",
+    "\n",
+    "# Predicting with a test dataset\n",
+    "predicted = pipe.predict(X_test)\n",
+    "print(predicted[0:10])\n",
+    "bins = np.concatenate(([min(predicted) - 1], bins, [max(predicted) + 1]), axis=None)\n",
+    "\n",
+    "predicted = np.digitize(predicted, bins)\n",
+    "print(predicted[0:10])\n",
+    "print(y_test[0:10])\n",
+    "\n",
+    "from sklearn import metrics\n",
+    "# Model Accuracy\n",
+    "print(\"Logistic Regression Accuracy:\",metrics.accuracy_score(y_test, predicted))\n",
+    "print(\"Logistic Regression Precision:\",metrics.precision_score(y_test, predicted, average='micro'))\n",
+    "print(\"Logistic Regression Recall:\",metrics.recall_score(y_test, predicted, average='micro'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 1 0 0 0 0 0 0 2 0 0 0 0 0]\n",
+      "Logistic Regression Accuracy: 0.7964021519838601\n",
+      "Logistic Regression Precision: 0.7964021519838601\n",
+      "Logistic Regression Recall: 0.7964021519838601\n"
      ]
     }
    ],
@@ -556,6 +632,8 @@
     "from sklearn import metrics\n",
     "# Predicting with a test dataset\n",
     "predicted = pipe.predict(X_test)\n",
+    "\n",
+    "print(predicted[0:20])\n",
     "\n",
     "# Model Accuracy\n",
     "print(\"Logistic Regression Accuracy:\",metrics.accuracy_score(y_test, predicted))\n",
