Simple DecissionTreeRegressor baseline.

--- a/exploration/exploration.ipynb
+++ b/exploration/exploration.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -495,20 +495,22 @@
        "                                 ngram_range=(1, 1), preprocessor=None,\n",
        "                                 stop_words=None, strip_accents=None,\n",
        "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
-       "                                 tokenizer=<function spacy_tokenizer at 0x1a5616dc20>,\n",
+       "                                 tokenizer=<function spac...kenizer at 0x1a5616dc20>,\n",
        "                                 vocabulary=None)),\n",
        "                ('classifier',\n",
-       "                 LogisticRegression(C=1.0, class_weight=None, dual=False,\n",
-       "                                    fit_intercept=True, intercept_scaling=1,\n",
-       "                                    l1_ratio=None, max_iter=512,\n",
-       "                                    multi_class='auto', n_jobs=None,\n",
-       "                                    penalty='l2', random_state=None,\n",
-       "                                    solver='lbfgs', tol=0.0001, verbose=0,\n",
-       "                                    warm_start=False))],\n",
+       "                 DecisionTreeRegressor(ccp_alpha=0.0, criterion='mse',\n",
+       "                                       max_depth=None, max_features=None,\n",
+       "                                       max_leaf_nodes=None,\n",
+       "                                       min_impurity_decrease=0.0,\n",
+       "                                       min_impurity_split=None,\n",
+       "                                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                                       min_weight_fraction_leaf=0.0,\n",
+       "                                       presort='deprecated', random_state=None,\n",
+       "                                       splitter='best'))],\n",
        "         verbose=False)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,9 +528,10 @@
     "# Logistic Regression Classifier\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.svm import LinearSVC\n",
     "\n",
-    "classifier = LogisticRegression(max_iter=512)# LogisticRegression(max_iter=512)\n",
+    "classifier = DecisionTreeRegressor() #LogisticRegression(max_iter=512)# LogisticRegression(max_iter=512)\n",
     "\n",
     "# Create pipeline using Bag of Words\n",
     "pipe = Pipeline([#('cleaner', predictors()),\n",
@@ -541,25 +544,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([-1,  2,  3,  4,  5,  6, 10])"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 2. 0. 0. 0. 0. 0. 1. 3. 0. 0. 0. 0. 0. 2. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 1. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 1. 0. 0. 2. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 1. 0. 0. 1. 0. 1. 0. 0. 0. 1. 1. 0. 0. 1. 0. 0. 0. 0.\n",
+      " 0. 2. 0. 1. 0. 0. 0. 0. 0. 0. 2. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0.]\n",
+      "Logistic Regression Accuracy: 0.7496637525218561\n",
+      "Logistic Regression Precision: 0.7496637525218561\n",
+      "Logistic Regression Recall: 0.7496637525218561\n"
+     ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "bins = np.arange(2, 7)\n",
-    "bins\n",
-    "\n"
+    "predicted = np.rint(pipe.predict(X_test))\n",
+    "print(predicted[0:100])\n",
+    "\n",
+    "from sklearn import metrics\n",
+    "# Model Accuracy\n",
+    "print(\"Logistic Regression Accuracy:\",metrics.accuracy_score(y_test, predicted))\n",
+    "print(\"Logistic Regression Precision:\",metrics.precision_score(y_test, predicted, average='micro'))\n",
+    "print(\"Logistic Regression Recall:\",metrics.recall_score(y_test, predicted, average='micro'))"
    ]
   },
   {
